--- a/package.json
+++ b/package.json
@@ -14,13 +14,19 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "emailjs-com": "^3.2.0",
+    "express": "^4.21.2",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.344.0",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.12.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.8.1",
+    "react-router-dom": "^7.4.1",
     "scss": "^0.2.4",
     "simplebar-react": "^3.3.0"
   },
@@ -41,5 +47,17 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
-  }
+  },
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DineshhNT/My-Sync.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/DineshhNT/My-Sync/issues"
+  },
+  "description": ""
 }
